Periodic assurance that this content will be retained once site is decomissioned

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
+*
 publications/index.php
+
+!_font
+!_img
+!_js
+!images
+!papers
+!posters
+!presentations
+!publications
+!.gitignore
+!.nojekyll
+!bullet_citadel.png
+!bullet_odu.png
+!bullet_oduphd.png
+!bullet_uf.png
+!index.html
+!index.js
+!mofro.png
+!postdoc.html
+!style.css
+!wsdlBlogFeed_matKelly_20180910.json
+
+candidacyProposal_matKelly.pdf
+candidacyProposal_slides.pdf
+
+reversearchiveit
